--- a/src/pages/main-page/ui/styles.module.css
+++ b/src/pages/main-page/ui/styles.module.css
@@ -1,51 +1,9 @@
-/*Жирный*/
-@font-face {
-  font-family: 'SF Pro Display Bold';
-  src: url(../../../shared/fonts/SF-Pro-Display-Bold.otf);
-}
-
-/*Средний*/
-@font-face {
-  font-family: 'SF Pro Display Medium';
-  src: url(../../../shared/fonts/SF-Pro-Display-Medium.otf);
-}
-
-/*Обычный*/
-@font-face {
-    font-family: 'SF Pro Display Regular';
-    src: url(../../../shared/fonts/SF-Pro-Display-Regular.otf);
-}
-
 .mainBg {
-  width: 100vw;
-  height: 100vh;
-  margin: 0; 
-  background: linear-gradient(rgba(0, 194, 255), rgba(45, 131, 251));
-  background-size:cover;
-}
-
-.mainFirstBlob {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  max-width: 50%;
-  max-height: 70%;
-}
-
-.mainSecondBlob {
-  position: absolute;
-  right: 0;
-  top: 0;
-  max-width: 35%;
-  max-height: 60%;
-}
-
-.mainThirdBlob {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  max-width: 30%;
-  max-height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .mainContent {
