--- a/src/pages/registration-page/ui/styles.module.css
+++ b/src/pages/registration-page/ui/styles.module.css
@@ -70,4 +70,7 @@
     font-family: 'SF Pro Display Regular';
     font-size: 20px;
     backdrop-filter: blur(9px);
+    &.load {
+         background-color: #7aa2dc;
+     }
 }
