--- a/src/pages/account-page/ui/styles.module.css
+++ b/src/pages/account-page/ui/styles.module.css
@@ -3,3 +3,62 @@
   width: 100%;
   height: 100%;
 }
+
+.accMainWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.accMain {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-height: 100%;
+  padding: 20px;
+  max-width: 1300px;
+}
+
+.accAccountTransaction {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+@media screen and (max-width: 900px) {
+  .accAccountTransaction {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+  }
+
+  .accMain {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-height: 100%;
+    margin: 20px;
+    max-width: calc(400px);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .accWrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+  }
+}
