--- a/src/shared/ui/home-layout/styles.module.css
+++ b/src/shared/ui/home-layout/styles.module.css
@@ -11,3 +11,19 @@
     linear-gradient(rgba(0, 194, 255), rgba(45, 131, 251));
   background-size: 80vmin, 30vmin, 30vmin, cover;
 }
+
+@media screen and (max-width: 650px) {
+  .mainBg {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+    height: 100%;
+    margin: 0;
+    background:
+      url("/src/shared/images/FirstBlobHome.svg") left bottom no-repeat,
+      url("/src/shared/images/SecondBlobHome.svg") right top no-repeat,
+      url("/src/shared/images/ThirdBlobHome.svg") right bottom no-repeat,
+      linear-gradient(rgba(0, 194, 255), rgba(45, 131, 251));
+    background-size: 80vmin, 30vmin, 30vmin, cover;
+  }
+}
