--- a/src/widgets/account-block/ui/styles.module.css
+++ b/src/widgets/account-block/ui/styles.module.css
@@ -1,15 +1,3 @@
-/*Жирный*/
-@font-face {
-    font-family: 'SF Pro Display Bold';
-    src: url(../../../shared/fonts/SF-Pro-Display-Bold.otf);
-}
-
-/*Средний*/
-@font-face {
-    font-family: 'SF Pro Display Medium';
-    src: url(../../../shared/fonts/SF-Pro-Display-Medium.otf);
-}
-
 .accBlock {
     display: flex;
     flex-direction: column;
@@ -19,13 +7,13 @@
     border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
     border-radius: 20px;
     padding: 0px 20px 0px 20px;
-    max-width: 343px;
+    width: 100%;
+    max-width: 400px;
     height: 260px;
 }
 
 .accBlockTitlePos {
     display: flex;
-    width: 100vw;
     max-width: 100%;
     justify-content: space-between;
     padding-top: 20px;
@@ -33,14 +21,22 @@
  }
 
 .accBlockTitle {
+    display: flex;
     font-family: 'SF Pro Display Bold';
     font-size: 20px;
     color: #FFFFFF;
 }
 
+.accAddButton {
+    cursor: pointer;
+}
+
 .accBlockText {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+    scrollbar-color: #74fbd3 transparent;
+    scrollbar-width: thin;
 }
 
 .accBlockTextInfo {
@@ -50,6 +46,7 @@
     font-size: 16px;
     color: #FFFFFF;
     margin-bottom: 20px;
+    cursor: pointer;
     &:last-child {
         margin: 0;
     }
