--- a/src/widgets/account-categories/ui/styles.module.css
+++ b/src/widgets/account-categories/ui/styles.module.css
@@ -1,15 +1,3 @@
-/*Жирный*/
-@font-face {
-    font-family: 'SF Pro Display Bold';
-    src: url(../../../shared/fonts/SF-Pro-Display-Bold.otf);
-}
-
-/*Средний*/
-@font-face {
-    font-family: 'SF Pro Display Medium';
-    src: url(../../../shared/fonts/SF-Pro-Display-Medium.otf);
-}
-
 .catBlock {
     display: flex;
     flex-direction: column;
@@ -19,7 +7,8 @@
     border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
     border-radius: 20px;
     padding: 0px 20px 0px 20px;
-    max-width: 1000px;
+    width: 100%;
+    max-width: 1100px;
     height: 360px;
 }
 
@@ -57,6 +46,11 @@
     display: flex;
     flex-wrap: wrap;
     gap: 33px 81px;
+    overflow-y: auto;
+    max-height: 100%;
+    scrollbar-color: #74fbd3 transparent;
+    scrollbar-width: thin;
+    justify-content: flex-start;
 }
 
 .catItem {
@@ -70,4 +64,40 @@
     width: 135px;
     height: 40px;
     background: #73FBD3;
+    cursor: pointer;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.catAddButton {
+    cursor: pointer;
+}
+
+@media screen and (max-width: 900px) and (min-width: 650px) {
+    .catBlock {
+        display: flex;
+        flex-direction: column;
+        backdrop-filter: blur(35px) brightness(100%);
+        background-color: #ffffff8f;
+        border-color: transparent;
+        border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
+        border-radius: 20px;
+        padding: 0px 20px 0px 20px;
+        max-width: 1100px;
+        height: 270px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .catList {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 33px 81px;
+        overflow-y: auto;
+        scrollbar-color: #73FBD3 #FFFFFF;
+        max-height: 100%;
+        scrollbar-width: thin;
+        justify-content: center;
+    }
 }
