--- a/src/widgets/side-bar/ui/styles.module.css
+++ b/src/widgets/side-bar/ui/styles.module.css
@@ -1,25 +1,7 @@
-/*Жирный*/
-@font-face {
-    font-family: 'SF Pro Display Bold';
-    src: url(../../../shared/fonts/SF-Pro-Display-Bold.otf);
-}
-
-/*Средний*/
-@font-face {
-    font-family: 'SF Pro Display Medium';
-    src: url(../../../shared/fonts/SF-Pro-Display-Medium.otf);
-}
-
-/*Обычный*/
-@font-face {
-    font-family: 'SF Pro Display Regular';
-    src: url(../../../shared/fonts/SF-Pro-Display-Regular.otf);
-}
-
 .sideBg {
     display: flex;
     flex-direction: column;
-    width: 310px;
+    width: 380px;
     height: 100vh;
     background: #FFFFFF;
 }
@@ -34,7 +16,7 @@
 .sideTitlePosition {
     display: flex;
     align-items: center;
-    margin: 50px 0px 50px 35px;
+    margin: 50px 20px 50px 35px;
     gap: 20px;
 }
 
@@ -56,4 +38,34 @@
     align-items: center;
     margin-left: 35px;
     gap: 10px;
+}
+
+@media screen and (max-width: 650px) {
+    .sideBg {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100%;
+        background: #FFFFFF;
+        justify-content: center;
+        padding: 10px;
+    }
+
+    .sideTitlePosition {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        margin: 0 0 15px 0;
+        padding: 10px;
+        gap: 20px;
+        border-bottom: lightgray solid 1px;
+    }
+
+    .sidePoint {
+        display: flex;
+        flex-direction: column;
+        font-family: 'SF Pro Display Regular';
+        font-size: 16px;
+        gap: 25px;
+    }
 }
