--- a/src/widgets/transaction-edit-modal/ui/styles.module.css
+++ b/src/widgets/transaction-edit-modal/ui/styles.module.css
@@ -11,10 +11,18 @@
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
 }
 
+.modMainPosition {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .modMain {
   display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   flex-direction: column;
-  width: 60vw;
+  width: 40vw;
   height: 80vh;
   backdrop-filter: blur(35px) brightness(100%);
   background-color: #ffffffff;
@@ -24,4 +32,68 @@
   border-radius: 20px;
   padding: 10px;
   margin: auto;
+}
+
+.modMainTitle {
+  font-family: "SF Pro Display Bold";
+  color: #000000;
+  font-size: 38px;
+  text-align: center;
+}
+
+.modInputStyle {
+  width: 300px;
+  height: 3%;
+  border: none;
+  border-bottom: 2px solid black;
+  background-color: transparent;
+  color: #000000;
+  outline: none;
+  font-family: 'SF Pro Display Regular';
+  font-size: 20px;
+  &::placeholder {
+    font-family: 'SF Pro Display Regular';
+    font-size: 20px;
+    color: inherit;
+    opacity: 60%;
+  }
+}
+
+.modButton {
+  width: 250px;
+  height: 40px;
+  background-color: #4A8FE7;
+  color: white;
+  border: none;
+  border-radius: 50px;
+  font-family: 'SF Pro Display Regular';
+  font-size: 20px;
+  backdrop-filter: blur(9px);
+  &.load {
+    background-color: #7aa2dc;
+  }
+}
+
+@media screen and (max-width: 900px) and (min-width: 650px) {
+  .modMainTitle{
+    font-size: 26px;
+  }
+  .modInputStyle {
+    width: 200px;
+  }
+  .modButton {
+    width: 200px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .modMainTitle{
+    font-size: 24px;
+  }
+  .modInputStyle {
+    width:150px;
+  }
+  .modButton {
+    width: 150px;
+  }
 }
