--- a/src/pages/account-page/ui/styles.module.css
+++ b/src/pages/account-page/ui/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
 
 .accMainWrapper {
@@ -10,6 +11,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-height: 100vh;
   height: 100%;
 }
 
