--- a/src/widgets/budget-diagram/ui/styles.module.css
+++ b/src/widgets/budget-diagram/ui/styles.module.css
@@ -1,15 +1,3 @@
-/*Жирный*/
-@font-face {
-    font-family: 'SF Pro Display Bold';
-    src: url(../../../shared/fonts/SF-Pro-Display-Bold.otf);
-}
-
-/*Средний*/
-@font-face {
-    font-family: 'SF Pro Display Medium';
-    src: url(../../../shared/fonts/SF-Pro-Display-Medium.otf);
-}
-
 .budBlock {
     display: flex;
     flex-direction: column;
@@ -19,13 +7,14 @@
     border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
     border-radius: 20px;
     padding: 0px 20px 0px 20px;
-    max-width: 343px;
+    width: 100%;
+    max-width: 400px;
+    min-width: 300px;
     height: 426px;
 }
 
 .budBlockTitlePos {
     display: flex;
-    width: 100vw;
     max-width: 100%;
     justify-content: space-between;
     padding-top: 20px;
@@ -36,6 +25,5 @@
     font-family: 'SF Pro Display Bold';
     font-size: 20px;
     color: #FFFFFF;
-    width: 100vw;
     max-width: 100%;
 }
