--- a/src/widgets/budget-settings/ui/styles.module.css
+++ b/src/widgets/budget-settings/ui/styles.module.css
@@ -1,4 +1,4 @@
-.setBlock {
+.setWrapper {
     display: flex;
     flex-direction: column;
     backdrop-filter: blur(35px) brightness(100%);
@@ -6,14 +6,31 @@
     border-color: transparent;
     border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
     border-radius: 20px;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 20px 20px 20px;
+    width: 100%;
     max-width: 628px;
-    height: 910px;
+    min-width: 300px;
+    height: 100%;
+    max-height: 646px;
+    gap: 20px;
+}
+
+.setBlockWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    width: 100%;
+}
+
+.setBlock {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .setBlockTitlePos {
     display: flex;
-    width: 100vw;
     max-width: 100%;
     justify-content: space-between;
     padding-top: 20px;
@@ -24,7 +41,6 @@
     font-family: 'SF Pro Display Bold';
     font-size: 20px;
     color: #FFFFFF;
-    width: 100vw;
     max-width: 100%;
 }
 
@@ -35,7 +51,7 @@
 }
 
 .setInputStyle {
-    width: 46%;
+    width: 230px;
     height: 25px;
     border: none;
     border-bottom: 1px solid white;
@@ -74,7 +90,7 @@
 }
 
 .setInputPeriod {
-    width: 5%;
+    width: 20px;
     height: 25px;
     border: none;
     border-bottom: 1px solid white;
@@ -86,7 +102,7 @@
 }
 
 .setInputPeriodNum {
-    width: 7%;
+    width: 35px;
     border: none;
     border-bottom: 1px solid white;
     background-color: transparent;
@@ -98,7 +114,7 @@
 }
 
 .setInputPeriodCheck {
-    width: 13%;
+    width: 90px;
     border: none;
     border-bottom: 1px solid white;
     background-color: transparent;
@@ -138,4 +154,61 @@ input[type="number" i] {
     margin: 0px 5px 0px 0px;
 }
 
+.setCalendar {
+    backdrop-filter: blur(20px) brightness(100%);
+    background-color: #ffffffcf;
+    -webkit-box-shadow: 10px 10px 70px -22px rgba(0,0,0,0.58);
+    -moz-box-shadow: 10px 10px 70px -22px rgba(0,0,0,0.58);
+    box-shadow: 10px 10px 70px -22px rgba(0,0,0,0.58);
+    height: fit-content;
+    width: 300px;
+    margin: 60px 0;
+    border-radius: 20px;
+    border: none;
+}
 
+@media screen and (max-width: 1300px) {
+    .setWrapper {
+        display: flex;
+        backdrop-filter: blur(35px) brightness(100%);
+        background-color: #ffffff8f;
+        border-color: transparent;
+        border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
+        border-radius: 20px;
+        padding: 0 40px 20px 40px;
+        width: 400px;
+        max-width: 400px;
+        min-width: 400px;
+        height: 100%;
+        max-height: none;
+    }
+
+    .setBlockWrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+        width: 100%;
+    }
+
+    .setCalendar {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .setWrapper {
+        display: flex;
+        flex-direction: column;
+        backdrop-filter: blur(35px) brightness(100%);
+        background-color: #ffffff8f;
+        border-color: transparent;
+        border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
+        border-radius: 20px;
+        padding: 0px 40px;
+        width: 100%;
+        min-width: auto;
+        height: 100%;
+        max-height: none;
+    }
+}
