--- a/src/widgets/transaction-edit-modal/ui/styles.module.css
+++ b/src/widgets/transaction-edit-modal/ui/styles.module.css
@@ -74,11 +74,27 @@
   }
 }
 
+.modInputPeriodCheck {
+  width: 300px;
+  border: none;
+  border-bottom: 2px solid black;
+  background: transparent;
+  color: #000000;
+  outline: none;
+  font-family: 'SF Pro Display Medium';
+  font-size: 16px;
+  height: fit-content;
+  text-align: center;
+}
+
 @media screen and (max-width: 900px) and (min-width: 650px) {
-  .modMainTitle{
+  .modMainTitle {
     font-size: 26px;
   }
   .modInputStyle {
+    width: 200px;
+  }
+  .modInputPeriodCheck {
     width: 200px;
   }
   .modButton {
@@ -91,6 +107,9 @@
     font-size: 24px;
   }
   .modInputStyle {
+    width:150px;
+  }
+  .modInputPeriodCheck {
     width:150px;
   }
   .modButton {
