--- a/src/pages/report-page/ui/styles.module.css
+++ b/src/pages/report-page/ui/styles.module.css
@@ -5,3 +5,26 @@
 .repGraph {
   margin-top: 50px;
 }
+
+.position {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.repBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  backdrop-filter: blur(35px) brightness(100%);
+  background-color: #ffffffaf;
+  border-color: transparent;
+  border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
+  border-radius: 20px;
+  padding: 0px 20px 20px 20px;
+  width: 1500px;
+  height: 900px;
+}
