--- a/src/widgets/transaction-edit-modal/ui/styles.module.css
+++ b/src/widgets/transaction-edit-modal/ui/styles.module.css
@@ -11,6 +11,14 @@
   border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.10000000149011612)) 1;
 }
 
+.modMainWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .modMainPosition {
   display: flex;
   justify-content: center;
